[package]
name = "riot-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
web-sys = "0.3.64"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }
serde_json = "1.0"
serde = "1.0"
serde-wasm-bindgen = "0.4"
log = "0.4"
humantime = "2.1.0"
wasm-logger = "0.2.0"
